# bloom_for_you

./: .gitignore  LICENSE  README.md  README_bak.md  letter_card_1234.html  message.npy  messages_0000.html  messages_0001.html  messages_1234.html  messages_1234.npy  package.xml  setup.py
bloom_for_you/: auth.py  flower_recommender.py  flower_wrapping.py  juntae_pub.py  logger.py  main.py  make_letter_card.py  message.npy  publisher_test.py  requirements.txt  robot_control.py  robot_test.py  scenario_manager.py  seed_planting.py  set_yolo_model.py  set_yolo_robot.py  setup.cfg  setup.py  speech_to_command.py  speech_utils.py  subscriber_test.py  test.py  test_yolo.py  voice_memory.py  watering_scheduler.py
bloom_for_you/bloom_for_you/: flower_recommender.py  flower_recommender_without_gui.py  flower_wrapping.py  make_letter_card.py  requirements.txt  seed_planting.py  set_robot.py  speech_to_command.py  topic_pub_test.py  watering_scheduler.py
bloom_for_you/function_modules/: auth.py  card_service_server.py  config.py  detection_.py  forcer.py  get_keyword.py  keyword_extraction.py  logger.py  mover.py  pick_and_place.py  robot.py  robot_control.py  robot_control_.py  robot_util.py  signal_server.py  stt.py  tts.py  use_yolo.py  (+2 more)
bloom_for_you_interfaces/: .gitignore  CMakeLists.txt  package.xml
bloom_for_you_interfaces/msg/: Command.msg  FlowerInfo.msg  GripTarget.msg
bloom_for_you_interfaces/srv/: CardSrv.srv
resource/: T_gripper2camera.npy  flower_recommendations.json  get_command_prompt.txt  recommender_prompt.txt
yolo_models/: README.md  train_model.ipynb
(+185 files in other folders)
